--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,41 @@
+:root{
+    --mainColor:#595656;
+    --lightColor:#fff;
+    --dark-100:#000;
+    --dark-75:#1b1b1b;
+    --dark-50:#202020;
+    --accent:#3EA0CD;
+    --marker-sei:#477096ad;
+    --marker-shi:#854492ad;
+    --transition-adjust: 0.3s ease;;
+}
+
 body{
-    background-color: #202020;
-    background: radial-gradient(circle, transparent 20%, #202020 20%, #202020 80%, transparent 80%, transparent),
-    radial-gradient(circle, transparent 20%, #202020 20%, #202020 80%, transparent 80%, transparent) 50px 50px,
-    linear-gradient(#1b1b1b 4px, transparent 4px) 0 -2px,
-    linear-gradient(90deg, #1b1b1b 4px, #202020 4px) -2px 0;
+    background-color: var(--dark-50);
+    background: radial-gradient(circle, transparent 20%, var(--dark-50) 20%, var(--dark-50) 80%, transparent 80%, transparent),
+    radial-gradient(circle, transparent 20%, var(--dark-50) 20%, var(--dark-50) 80%, transparent 80%, transparent) 50px 50px,
+    linear-gradient(var(--dark-75) 4px, transparent 4px) 0 -2px,
+    linear-gradient(90deg, var(--dark-75) 4px, var(--dark-50) 4px) -2px 0;
     background-size: 50px 50px, 50px 50px, 25px 25px, 25px 25px;
     height: 300px;
     font-family: 'Sawarabi Gothic', sans-serif;
+    color: white;
 }
 ::selection {
-	background: #676262c0;
-	color: #fff;
+	background: var(--mainColor);
 }
 .clearfix{
     clear: both;
 }
+
 
 #splash {
       position: fixed;
       width: 100%;
       height: 100%;
       z-index: 999;
-      background:#595758;
+      background:var(--mainColor);
       text-align:center;
-      color:#fff;
     }
     
     #splash_logo {
@@ -62,14 +74,20 @@ body{
     width: 80%;
     height:15px ;
     text-align: right;
-    color:white;
 }
+
+.ui-tooltip {
+    background-color: rgba(0, 0, 0, 0.5);
+    color:var(--lightColor);
+	font-size: 12px;
+	box-shadow: none;
+}
+
 #about{
     padding-top: 50px;
     padding-bottom: 50px;
     margin: auto;
     width: 80%;
-    color: white;
 }
 #characterfilter{
     margin: auto;
@@ -87,20 +105,19 @@ body{
 
 .btn{
     text-align: center;
-    background: linear-gradient(90deg, #7c7c7c 0%,#555555 40%, #477199 100%);
+    background: linear-gradient(90deg, #7c7c7c 0%,var(--mainColor) 40%, var(--accent) 100%);
     background-position: 1% 50%;
     background-size: 200% auto;
-    color:#ffffff;
     margin: auto;
     display: inline-block;
     width: 100px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 30px;
-    padding-right: 30px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    transition: all  0.3s ease;
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
+    padding-left: 2em;
+    padding-right: 2em;
+    border-top-left-radius: 0.3em;
+    border-top-right-radius: 0.3em;
+    transition:  var(--transition-adjust);
     opacity: 0.9;
 }
 .btn:hover{
@@ -112,9 +129,6 @@ body{
     background-position: 100% 50%;
     opacity:1;
 
-}
-#btnISN{
-    display: none;
 }
 
 .charaHover {
@@ -134,8 +148,8 @@ body{
 	transform: translate(-50%, -50%);
 	width: 100%;
 	display: block;
-	-webkit-transition: .2s ease-in-out;
-	transition: .2s ease-in-out;
+	-webkit-transition: var(--transition-adjust);
+	transition: var(--transition-adjust);
 }
 .charaHover:hover img:nth-of-type(2) {
 	opacity: 0;
@@ -152,30 +166,90 @@ body{
 
 .introImg{
     float: left;
-    padding-left: 15%;
+    padding-left: 10%;
+    width: 30%;
 
 }
 .introImg img{
-max-width: 300px;
+    width: 100%;
+    min-width: 200px;
+    max-width: 300px;
+
 }
 .introText{
-    padding-left: 50px;
+    width:40%;
+    min-width: 18rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
     float: left;
-    color: white;
     text-align: left;
 }
 .name{
     font-size: 40px;
-    padding-top:50px;
+    padding-top:3rem;
 }
-.highlightmarker{ background: linear-gradient(transparent 40%, #477096ad 40%);}
-#theo,#kaimiIntro,#shachenIntro,#hikaruIntro,#nozomuIntro,#ayaIntro,#suzutoIntro,#theoIntro{
+.frommarker{ background: linear-gradient(90deg, var(--marker-sei) 0%,transparent 100%);}
+.lostmarker{ background: linear-gradient(90deg, var(--marker-shi) 0%, transparent 100%);}
+.fromnlost{background: linear-gradient(90deg, var(--marker-sei) 0%,var(--marker-shi) 66%,transparent 100%)}
+
+#kaimiIntro,#shachenIntro,#hikaruIntro,#nozomuIntro,#ayaIntro,#suzutoIntro,#theoIntro,#grimIntro,#hibikiIntro,#genIntro{
     display: none;
 }
 
 #footer{
-    padding:20px;
-    background-color:#595656 ;
-    color: white;
+    padding:0.8rem;
+    background-color:var(--mainColor);
     text-align: center;
+}
+#footer a,#about a{
+    padding-bottom: 0.2rem;
+    padding-top: 0.1rem;
+    padding-left: 0.3rem;
+    padding-right: 0.3rem;
+    border-radius: 0.3rem;
+    text-decoration: none;
+    color:var(--accent);
+    background-color: none;
+    transition: var(--transition-adjust);
+}
+#footer a:hover,#about a:hover{
+
+    background-color: var(--lightColor);
+    color:var(--mainColor);
+}
+#backToTop {
+    max-width: 80px;
+	position: fixed;
+	right: 2rem;
+	bottom:4.2rem;
+	z-index: 2;
+    opacity: 0;
+	transform: translateY(100px);
+}
+#backToTop.UpMove{
+	animation: UpAnime 0.5s forwards;
+}
+@keyframes UpAnime{
+  from {
+    opacity: 0;
+	transform: translateY(100px);
+  }
+  to {
+    opacity: 1;
+	transform: translateY(0);
+  }
+}
+
+#backToTop.DownMove{
+	animation: DownAnime 0.5s forwards;
+}
+@keyframes DownAnime{
+  from {
+  	opacity: 1;
+	transform: translateY(0);
+  }
+  to {
+  	opacity: 0;
+	transform: translateY(100px);
+  }
 }
